# langfuse-ollama

./: .env.example  .gitignore  2026-05-15.md  Makefile  README.md  app.py  batch_runner.py  batch_tab.py  chat_tab.py  config.py  feedback_widget.py  ollama_client.py  prompts.example.jsonl  pyproject.toml  requirements.txt  sidebar.py  trace_cli.py
.streamlit/: config.toml
langfuse_ollama/adapters/: langfuse_ollama.py  ollama_api.py
langfuse_ollama/core/: batch_runner.py  ollama_client.py
langfuse_ollama/domain/: entities.py  ports.py
langfuse_ollama/ui/: batch_tab.py  chat_tab.py  feedback_widget.py  sidebar.py  styles.py
langfuse_ollama/use_cases/: batch.py  chat.py
tests/: test_adapters.py  test_batch_runner.py  test_config.py  test_domain.py  test_feedback_widget.py  test_ollama_client.py  test_trace_cli.py  test_use_cases_batch.py  test_use_cases_chat.py
