[project]
name = "langfuse-ollama-tracer"
version = "0.2.0"
description = "Streamlit UI + CLI for tracing Ollama chats with Langfuse observability"
requires-python = ">=3.9"
license = { file = "LICENSE" }
dependencies = [
    "langfuse>=3.7,<4",
    "openai>=1.0,<3",
    "streamlit>=1.45,<2",
    "python-dotenv>=1.0,<2",
    "httpx>=0.27,<1",
]

[tool.setuptools]
py-modules = ["app", "trace_cli"]

[tool.setuptools.packages.find]
include = ["langfuse_ollama*"]
